--- a/style.css
+++ b/style.css
@@ -60,3 +60,9 @@ p {
 .envoriment_li p{
     margin-top: 10px;
 }
+.modal-content{
+    margin-top: 100px;
+}
+.modal-body{
+    text-align: center;
+}
